--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 @import "tailwindcss";
 @import "@fontsource/reddit-sans-condensed/400.css";
 @import "@fontsource/reddit-sans-condensed/700.css";
+@import "react-toastify/dist/ReactToastify.css";
